--- a/java/grpc-client/pom.xml
+++ b/java/grpc-client/pom.xml
@@ -51,6 +51,16 @@
       <groupId>io.netty</groupId>
       <artifactId>netty-tcnative-boringssl-static</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-transport</artifactId>
+      <version>4.1.27.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-common</artifactId>
+      <version>4.1.27.Final</version>
+    </dependency>
 
     <dependency>
       <groupId>io.vitess</groupId>
